Attempt to fix overflowing when screen width is too narrow

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,5 @@
 #root {
-  margin: 1vw;
-  padding: 1vw;
   text-align: left;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
 
 .default-font {
