--- a/src/MiniDiscord.css
+++ b/src/MiniDiscord.css
@@ -5,7 +5,7 @@ div.cmdContainer {
   border-color: #a19d89;
   border-radius: 0.7em;
   padding: 0.7em;
-  min-width: 500px;
+  min-width: 300px;
   height: 1.5em;
   align-content: center;
 }
@@ -36,7 +36,7 @@ div.cmdFieldInputContainer {
   display: flex;
   border-bottom-right-radius: 0.4em;
   border-top-right-radius: 0.4em;
-  width: 10px;
+  width: 0.4em;
   padding: 0.25em;
   height: 1em;
   align-content: center;
@@ -48,7 +48,7 @@ img.botIcon {
   max-width: 100%;
   max-height: 100%;
   align-self: center;
-  margin-left: 0.2em;
+  padding-left: 0.2em;
 }
 
 p.cmdName {
